# excelforge

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: build.yml
src/ExcelForge/: AppConstants.cs  ExcelForge.csproj  Program.cs
src/ExcelForge.Native/: CMakeLists.txt  ExcelNative.cpp  ExcelNative.h
src/ExcelForge/Converters/: CsvExporter.cs  IConverter.cs  JsonExporter.cs  XlsxConverter.cs
src/ExcelForge/Native/: NativeBridge.cs
src/ExcelForge/UI/: MainForm.Designer.cs  MainForm.cs
src/ExcelForge/Updater/: GitHubUpdater.cs  ReleaseInfo.cs
